--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "__MSG_appName__",
+  "name": "Selesti Link Browser",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "__MSG_appDescription__",
+  "description": "A simple extension that allows you to store a list of URLs and browse through them",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
