--- a/app/manifest.json
+++ b/app/manifest.json
@@ -18,7 +18,8 @@
     "tabs",
     "http://*/*",
     "https://*/*",
-    "storage"
+    "storage",
+    "unlimitedStorage"
   ],
   "browser_action": {
     "default_icon": {
