updated to latest build scripts

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,6 @@
 
 root = true
 
-
 [*]
 
 # Change these settings to your own preference
@@ -22,3 +21,9 @@ insert_final_newline = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.js]
+indent_size = 4
+
+[*.html]
+indent_size = 4
