--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,9 +1,8 @@
 {
-  "name": "Selesti Link Browser",
-  "version": "0.0.3",
+  "name": "__MSG_appName__",
+  "version": "0.0.1",
   "manifest_version": 2,
-  "description": "A simple extension that allows you to store a list of URLs and browse through them",
-  "update_url": "https://github.com/Selesti/google-chrome-link-browser/raw/master/dist.crx",
+  "description": "__MSG_appDescription__",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
@@ -26,7 +25,7 @@
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
-    "default_title": "linkbrowser",
+    "default_title": "Slink",
     "default_popup": "popup.html"
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
