--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
-  "name": "linkbrowser",
+  "name": "slink",
   "private": true,
   "version": "0.0.1",
+  "dependencies": {},
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.0.1",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "vue": "^2.5.13"
   }
 }
